# career_conversation_bot

./: .env.example  .gitignore  README.md  app.py  pyproject.toml
me/: summary.txt
