[project]
name = "career-conversation-bot"
version = "0.1.0"
description = "A Gradio chatbot that represents Christian Hunt for career-related conversations"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "gradio>=5.22.0",
    "openai>=1.68.2",
    "python-dotenv>=1.0.1",
    "pypdf>=5.4.0",
    "requests>=2.32.3",
]
